# snake-game

./: README.md  pyproject.toml
src/designing_a_classic_snake_game/: crew.py  main.py
src/designing_a_classic_snake_game/config/: agents.yaml  tasks.yaml
